--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div align="center">
       <h3><a href="1_1/index.html">ANNO 1 SEMESTRE 1</a></h3>
       <h3><a href="1_2/index.html">ANNO 1 SEMESTRE 2</a></h3>
+      <h3><a href="2_1/index.html">ANNO 2 SEMESTRE 1</a></h3>
       <h2>
         <a
           href="https://www.auic.polimi.it/fileadmin/user_upload/MAPPA_LEONARDO_2020/mappa_leonardo_2020_c.pdf"
