--- a/2_1/index.html
+++ b/2_1/index.html
@@ -9,5 +9,10 @@
 		<h1 align="center">ANNO 2 SEMESTRE 1</h1>
 		<a href="https://www.auic.polimi.it/fileadmin/user_upload/MAPPA_LEONARDO_2020/mappa_leonardo_2020_c.pdf" target="_blank">MAPPA</a>
 		<br/>
+		<div id="list"></div>
+		<div class="image-container">
+			<div class="point" style="left: 16.5%; top: 22.5%"></div>
+			<img src="orario.png" alt="centered image" >
+		</div>
 	</body>
 </html>
