--- a/2_1/index.html
+++ b/2_1/index.html
@@ -12,6 +12,7 @@
 		<div id="list"></div>
 		<div class="image-container">
 			<div class="point" style="left: 16.5%; top: 22.5%"></div>
+			<div class="point" style="left: 16.5%; top: 52.5%"></div>
 			<img src="orario.png" alt="centered image" >
 		</div>
 	</body>
