--- a/2_1/index.html
+++ b/2_1/index.html
@@ -29,6 +29,7 @@
 					2.2.5 - D.I.
 				</p>
 			</div>
+			<div class="point" style="left: 16.5%; top: 55%"></div>
 			<div class="free-box" style="width: 10.35%; height: 23.7%; left: 45.1%; top: 54.1%">
 				<p>
 					3.0.2<br/>
