--- a/2_1/index.html
+++ b/2_1/index.html
@@ -14,8 +14,7 @@
 			<div class="point" style="left: 16.5%; top: 7.5%"></div>
 			<div class="free-box" style="width: 10.35%; height: 14.7%; left: 55.45%; top: 24.5%">
 				<p>
-					3.2.1<br/>
-					2.1.2?
+					2.1.2
 				</p>
 			</div>
 			<div class="point" style="left: 16.5%; top: 26.5%"></div>
@@ -26,6 +25,7 @@
 			</div>
 			<div class="point" style="left: 16.5%; top: 52%"></div>
 			<div class="point" style="left: 16.5%; top: 62.5%"></div>
+			<div class="point" style="left: 16.5%; top: 70%"></div>
 			<img src="orario.png" alt="centered image" >
 		</div>
 	</body>
