--- a/2_2/index.html
+++ b/2_2/index.html
@@ -14,6 +14,9 @@
 			
 			<div class="point" style="left: 16.5%; top: 16%"></div>
 			<div class="point" style="left: 16.5%; top: 23%"></div>
+			<div class="point" style="left: 16.5%; top: 32.5%"></div>
+			<div class="point" style="left: 16.5%; top: 51%"></div>
+			<div class="point" style="left: 16.5%; top: 84%"></div>
 			<!--
 				<div class="free-box" style="width: 10.35%; height: 14.7%; left: 55.45%; top: 24.5%">
 					<p>
